Update 进程 线程.md(死锁：4必要条件；预防；避免(银行家)：检测(资源分配图)、解除

--- a/25_te/进程 线程.md
+++ b/25_te/进程 线程.md
@@ -1,5 +1,5 @@
-## 进程 线程
-### P T
+
+## P T
 - ==进程==
     - >资源分配 基本单位
     - PCB data 程序
@@ -13,7 +13,7 @@
             - same程序 run on不同数据集
                 - → **不同**进程
             - --
-        - 实体与**c**语言对应
+        - 实体与**c**语言
             - PCB ——process优先级
             - 正文段——全局赋值变量，常量值(19,"string"
                 - processes不能utilize全局变量 exchange 数据(无联系
@@ -93,9 +93,10 @@
                 - 共享file、存储区，消息传递
     - ==状态==
         - 创建
-        - 就绪
-            - 申请不被satisfy← changed to..
-                - ？？why 不是阻塞
+       
+        - **就绪**
+            - 申请**处理器**(CPU)不被satisfy← changed to..
+                - <span style="color:lightgray">即调度</span>
             - can由2type态转入
                 - 阻塞，运行
                     - 运行→就绪
@@ -111,7 +112,7 @@
                         - 按FIFO等principle排序
                     - 优先级按fix算法计算
                         - 可能增大
-                    - 就绪态can't work
+                    - <span style="color:lightgray">this态can't 直接work</span>
         - --
         - **运行**
             - >有且仅1 process working
@@ -134,6 +135,7 @@
             - can由2type态转入
                 - 阻塞，运行
         - --
+      
         - **阻塞**
             - >certain事件/资源 不满足而 wait
                 - usually
@@ -151,6 +153,7 @@
             - only__转换 由process自身决定
                 - 运行→阻塞
                     - ↑ <span style="color:lightgray">自己会变阻塞</span> need →就绪
+                    - 只会由 运行→阻塞
         - 终止
 <br>
     ---
@@ -218,7 +221,298 @@
         - drawback
             - 不安全
                 - might一个错 influence whole
+---
+---
 
-### cpu调度
-### 同步、互斥
-### 死锁deadly embrace
+## cpu调度
+- concept
+    - 三级调度
+        - 高(作业
+            - >创建→就绪态
+        - 中(内存
+            - >节省内存
+        - 低(P
+- 进程切换
+- 调度算法
+    - 考虑因素
+        - 公平、互斥、周转t
+            - ↑互斥性not, a 同步机制
+    - type
+        - 先
+        - 短
+        - 比
+        - 片
+            - >多用户
+        - 优
+        - 队
+## 同步、互斥
+- base
+    - type
+        - 同步
+            - >for 完成a certain任务，established相互合作关系of多p
+            - 4principle
+                - 空闲让进
+                    - --
+                - 忙则等待
+                - 让权..
+                    - --
+                - 有限..
+            - 对并发p同步
+                - reason
+                    - 并发p **异步**
+                        - ~: 
+                            - 各自独立的、不可预知的速度向前推进)
+                            - ↑∴ need  assure p'先后次序
+                            - eg.p_r与p_w 对同一段缓冲区' r w
+                                    - --
+                                - discern：一段体现同步，一element体现互斥
+                                    - through 共享缓冲区协作complete data处理
+        - 互斥
+- --
+- 临界区互斥
+    - base
+        - **临界区**
+            - >**代码** of visiting**临界资源** in 进程 <span style="color:lightgray">←多p together share 系统资源</span>
+                - 临界资源：
+                    - >互斥的 共享资源
+                        - 该r is 可共享的
+                            - 但 1次 only 1p use
+                                    - --
+                                - eg.
+                                    - printer、 共享变量、共享缓冲区
+                                        - ↑非共享数据 not
+                                    - 公用queue
+                                        - ↑可重入代码not ←1次可多p
+                                            - link.共享程序段
+                                                - ↑不允许修改'code
+                                                    - 必use 可重入实现
+            - 进入
+                - 必互斥
+                    - can存在：p未出区，便阻塞
+                        - ↑other抢占处理器，but 不进入 该p的临界区
+                            - --
+                        - eg.p被中断 by申请等待I/O操作
+- **互斥锁**
+    - >二进制S, only 打开、关闭 
+    - used in
+        - >多T、P
+            - ↑but only 解锁 by对它加锁' T / P
+    - might死锁：
+        - 循
+            - ↑2T 对 2different 互斥锁先后加锁，but顺序相反
+                - 例：T1对A加锁，then 对B加锁；
+                    - 同时，T2先对B加锁，then 对A加锁
+                        - ↑2T both wait 对方release，can't推进
+
+    - --
+- ==信号量&PV操作==
+    - base
+        - 信号量
+            - >semaphore
+            -  used in
+                - 互斥
+                - 同步
+                    - ↑=execute 前驱关系
+                    - discern：
+                        - 并发
+                            - ↑no need 信号量
+            - --
+            - type
+                - **互斥量**
+                    - >usually S_init=1 ←临界区only 允许 1p入
+                        - S=0
+                            - 已有1p 进入 临界区
+                            - 区外 无other p 等待
+                        - ..＜0
+                            - 区中已有1p
+                                - |S| = p数 of 区外等待
+                                    - - -
+                                    - eg. S=3--PV操作→S=-1
+                                        - p_wait=1
+                    - --
+                    - PV操作中的 S初值
+                        - set by 用户自身
+                            - expect初值 
+                                - 未产生
+                                    - 则0
+                                - 已..
+                                    - 则非0正整数
+                - 资源量
+                    - >
+                        - S=任意整数
+                        - ..＜0
+                            - r已用完
+                            - |S| = p_wait数
+            - --
+        - PV操作
+            - >**原语**of低级p通信
+                - 原语
+                    - ↑不可再分 指令序列
+                        - ↑also 不可中断
+            - type
+                - p
+                    - might导致
+                        - 当前 临界区'p 阻塞
+                - v
+                   
+- --
+- 经典同步
+    - P-C
+    - R-W
+        - - -
+    <a id="section1"></a>
+    - philosopher
+        - >死锁：循环等待
+            - 预防：
+                - 同时check2支筷子 whether可用
+                    - ↑资源浪费；
+                        - but释放后，其他可用，不会饥饿
+                - 奇拿左再拿右；偶相反
+---
+## 死锁deadly embrace
+- base
+    <a id="section2"></a>
+    - **资源分配图**
+        - >有向图：show R与P的状态
+        - element：
+            - 申请边
+                - 有向边 of p→资源
+            - 分配..
+                - ...of p←资源
+        - --
+        - 表示ways：
+            - 矩形框
+                - 资源
+                    - - -
+                    - 圆点：
+                        - 资源数目；
+                    - 圆圈节点
+                        - p
+        - --
+        - judge：
+            - 死锁充要：
+                -  环路&每类R仅1
+                    - ↑无环，必不
+                - 
+    - --
+    - discern：
+        -  饥饿
+            - >满足别人，自己得不到满足
+    - --
+    - 由code judge
+- - -
+- 条件(4
+    - **必要**..
+        - 互
+            - >资源is独占的
+        - 请
+            - **预防**：
+                - 一次性/**静态分配**all资源
+                    - ↑不会partly占有
+                    - 分配：
+                        - count：
+                            - >不死锁
+                            -  x个进程，y类资源，z资源总数
+                                - 求z最少
+                                    - 死锁发生时分配(x*(y-1))+1
+                                        - eg.3进程4类
+                                            - 3*3+1
+                                        ---
+                                    -  special：
+                                        - 进程数>z资源总数
+                                            - also不会死锁
+                                    - 注意
+                                        - 同类时，每个进程需要y个
+                                            - ↑regard as y类
+                                - --
+  
+                    - link：
+                        - 不能预防，反而加重条件：
+                            - pv操作
+                            - 进程互斥地use共享资源(？如何理解
+                        - 检测only发生后work，can't预防
+        - 不
+            - >R使用后，由p自己释放
+        - --
+        - **循**
+            - 例：
+                - [philosopher](#section1)
+                - 高优先级still might循环等待
+            - 预防：
+                    - resource**有序分配**
+- **预防**
+    - >破坏4条件之一
+    - >可确保不死锁
+    - 互
+        - ↑无法破坏
+            - 独 can't turn to互
+- --
+- 避免(==银行家==算法)
+    - >add算法限制，during资源动态分配
+        - 防止enter **不安全状态**
+            - ↑死锁一定 不安全
+                - ![Screenshot_2025-10-12-15-14-04-636_cn](https://github.com/bluejedis/picx-images-hosting/raw/master/OS/Screenshot_2025-10-12-15-14-04-636_cn.wps.moffice_eng-edit.54y5cncdvz.webp)
+                - ↑安全一定无死锁
+    - 算法：
+        - base
+            - >至少1p get all资源←at any time
+            - condition
+                - p已占有的r + 申请的资源数this time ≤ 对r 的最大需求量
+                - && 现存r can meet 尚需的**最大**资源量
+                    - ↑discern：
+                        - 预防
+                            - limit r: 顺序分配
+                                - ↑银行家no
+                        - 检测
+                            - 不care 分配
+                            - detect到死锁 才conduct措施
+            - element：
+                - ==安全序列==
+                    - >按序列allocate后，不死锁
+                        - attention：
+                            - meet一个后，后面2个及2个以上p不满足，neither 安全序列
+                                - eg.同类r共4，p1 p2 p3 max需求4 3 1；
+                                    - 已分2 1 0
+                                    - ↑无安全序列
+                                        - 分给p3，后面p3**执行完后释放**1个r p1 p2 still抢
+                    -- 
+                    -  求：
+                        - skill：
+                            - >大部分情况下
+                            - 优先meet：max-已分 ←最小
+                                - ↑选择题 不考虑释放过程
+                            ---
+                        -  多p，多个r 分配
+                            - usually 竖向考虑
+                                - 43横看？
+            -  process：
+                - 
+        - count
+            - sum of 最大需求量
+                - >m个总数，n个进程
+                - 最极端
+                    - n-1申请1个
+                    - 剩余1个 apply m
+                    - ？↑和之前结论有区别和联系吗
+                        - ↑之前是算min
+            - --
+            - 26？这么做的原理，33、34同理
+                - ↑按之前的allocation结论也能做
+- --
+- **检测、消除**
+    - 检测
+        - >detect [资源分配图](#section2) / 资源matrix
+
+        - 死锁**定理**
+    - 解/消除
+        - 夺资
+        - 销p
+---
+- left
+    - 23、24 code
+    - banker分配框图题
+        - 26+33、34 +~~41~~、43
+---
+看选项要看完整
+
+---        
