进程 线程.md(CPU调度：三级、切换，算法(3优先+3；同步互斥：base, 临界区互斥(软件3，硬件2，互斥锁；Semaphore &PV操作，经典同步，管程

--- a/25_te/进程 线程.md
+++ b/25_te/进程 线程.md
@@ -101,7 +101,7 @@
                 - 阻塞，运行
                     - 运行→就绪
                         - reason
-                            - 时间片到 (wait for next片
+                            - **时间片**到 (wait for next片
                             - appear更高优先级process
                         - occur进程切换
                             - cpu调度different进程excecute
@@ -223,38 +223,188 @@
                 - might一个错 influence whole
 ---
 ---
+各chapter之间link：![SAVE_20251013_122358](https://bluejedis.github.io/picx-images-hosting/OS/SAVE_20251013_122358.5fkz724kff.webp)
 
+---
 ## cpu调度
 - concept
     - 三级调度
         - 高(作业
-            - >创建→就绪态
-        - 中(内存
-            - >节省内存
-        - 低(P
-- 进程切换
-- 调度算法
+            - >创建→就绪 态
+        - **中**(内存
+            - >**节**省内存
+        - **低(P**
+            - >p调度
+                - p占用处理器时间长短
+                    - update to
+                        - p itself特点
+                        - 进程调度策略
+                - 临界区内的p也能被调度
+                    - <span style="color:lightgray">例：p请求一个 needed wait' r，如printer
+                    - 主动 give up CPU,
+                    - let others运行</span>
+                - 手段：
+                    - **p上下文** 切换
+                        - >实现不同p在处理器中交替
+                        - 进程上下文：
+                            - include：
+                                - all R'值<span style="color:lightgray">(现场info</span>
+                                    - ↑含PC
+                                - p'状态&控制info
+                                - 堆栈
+                            - no
+                                - 中断vector
+                - --
+                - **时机**/引起执行：
+                    - 运行完毕/时间片用完/错误
+                        - 时间片用完 转 就绪态
+                    - 自我阻塞
+                    - 中断finish
+                    - 所需资源 未备好
+
+- 进程**切换**
+    - 
+- - -
+- 调度**算法**
     - 考虑因素
-        - 公平、互斥、周转t
-            - ↑互斥性not, a 同步机制
-    - type
-        - 先
-        - 短
+        - 指标：
+            - 公平、周转t，资源利用率
+            - ↑互斥性not
+                - is a 同步机制 to assure多p不冲突
+        - 平均周转时间
+            - >总t/作业数
+                - type：
+                    - 单道式
+                        - 依次+前exe时间
+                            - eg.4作业，每个执行time=2h
+                                - 2+4+6+8=20
+                                - ∴平均=20/4
+    - type(3优先
+        - FCFS
+            - >利于长作业
+                - ≈CPU繁忙型 ←occupy 时间长
+                    - link：
+                        - 短作业≈ I/O繁忙型
+        - --
+        - 短SJF
+            - > 短作业/p优先
+                - >平均周转t最小（among all 算法
+                - discern：
+                    - 作业 与 p
+                        - 作业
+                            - from用户
+                            - 以用户任务 为unit
+                        - p
+                            - ..os
+                            - ..os控制
+            - type：
+                - >count相关 画gantt图解决
+                - 非..
+                    - >0时刻 到达了，就执行
+                        - ↑会cover掉 后续的一部分p的就绪时间
+                - 抢占式...（SRTF
+                    - >新p＜正执行
+        - --
         - 比
+            - >高响应比优先
+                - meet 短作业优先+无饥饿
+                    - ↑最开始，短作业响应比高
+                        - with 等待t↑，长作业比高
+            - 响应比=(等待t+ work_t)/work_t
+                - eg. 8：00到达，10：00执行，运行time 1h
+        - --
         - 片
-            - >多用户
-        - 优
+            - >多user下 及时响应
+                - ↑let 用户 以为独占
+                - 例：人机交互；分时system
+            - 绝对可抢占
+                - ↑用完必切换
+            - 片过大
+                - > 大于p needed 运行时间
+                    - →FCFS
+        - --
+        - 优先级
+            - >易饥饿
+                - ↑ "短" 同
+            - type1：
+                - 静态..
+                    - >优先级在p创建时确定
+                        - 不再改变
+                - 动态..
+                    - 优先权：
+                        - p运行时间↑，..↓(←时间片用完时降
+                        - p等待时间↑，..↑
+            -  type2：
+                - 非..
+                    - t&次数 count
+                        - 思路同抢占← 就绪过程中不抢占而已(?是同时到达都发生
+                            - eg.结合次数+t
+                                - (此题 进程调度、切换 开销 算1us)![IMG_20251013_205800](https://bluejedis.github.io/picx-images-hosting/OS/IMG_20251013_205800.1apdvgumtp.webp)
+                                    - ![Screenshot_2025-10-13-21-19-48-010_cn](https://bluejedis.github.io/picx-images-hosting/OS/Screenshot_2025-10-13-21-19-48-010_cn.wps.moffice_eng-edit.3uv884dp64.webp)？44题答案计算也没用gantt，也不严谨吧
+                ---
+                -  抢占式/剥夺式优先级              
+                    - >suite实时system
+                    - **抢占**
+                        - >就绪queue中，同时到达
+                            - 按优先级，get cpu使用权
+                        - 进程调度/get cpu **次数**：
+                            - 就绪队列(抢占)次数+执行
+                                - 就绪：
+                                    - p 每就绪，不执行，就算一次进程调度 get cpu
+                                - 执行：
+                                    - (最高优先if 就绪中last到，get后直接执行
+                        - 平均周转t
+                            - >选择题不用gantt←用定义：总t/总数
+                                - 确定order后
+                                    - `总t=总enter就绪t+总执行t` ⚠️🚧可行性待验证←就绪t的值/跨度大，p少，才可用←慎用，多练gantt
+                                        - 总执行t=1st*n+2nd*(n-1)+...+last
+                                    ---
+                                    - eg.(此题 值大 权高 ←级别依据题意确定)![IMG_20251013_210114](https://bluejedis.github.io/picx-images-hosting/OS/IMG_20251013_210114.13m60182cr.webp)
+                                - ==gantt==法
+                                    - 画图
+                                        - ![IMG_20251013_220913](https://bluejedis.github.io/picx-images-hosting/OS/IMG_20251013_220913.175rxtdr4b.webp)
+                                    - 分别求p的周转时间←最终完成-到达
+            - - -
+            - 优先级set
+                - principle
+                    - ① I/O 作业 高于 计算..
+                    - ② I/O 繁忙型优先(短作业)← I/O时间比高
         - 队
+            - >多级反馈队列
+                - ↑let 各作业满意
+            - feature
+                - >cost大
+                    - discern：
+                        - cost小：
+                            - FCFS← 无需计算，最简单
+                - 响应快，利用率、并行度高
+            - 考虑：
+                - 就绪queue 数量
+                - ..优先级
+                - ..调度算法
+                - 迁移条件 of p in..
+---
+- left
+    - gantt方法
+        - 25、27+37(非)抢占式 短作业优先? 区别和计算原理
+        - 44非抢占式 49、50抢占式 优先级
+    - other
+        - 26周转t
+        - 45 多级队列
+
+---
+---
 ## 同步、互斥
 - base
     - type
-        - 同步
+        - **同步**
             - >for 完成a certain任务，established相互合作关系of多p
             - 4principle
                 - 空闲让进
                     - --
                 - 忙则等待
-                - 让权..
+                - **让权**..
+                    - ↑不能enter临界区的p 立刻放弃cpu
                     - --
                 - 有限..
             - 对并发p同步
@@ -265,19 +415,40 @@
                             - ↑∴ need  assure p'先后次序
                             - eg.p_r与p_w 对同一段缓冲区' r w
                                     - --
-                                - discern：一段体现同步，一element体现互斥
+                                - discern：一段体现同步，一element体现互斥：
                                     - through 共享缓冲区协作complete data处理
+                                - --
+                        - **并发**code
+                            - >抓"一段时间间隔内"
+                                - ↑not 同一时刻
+                                    - 要么先p1要么先p2 or p1/p2流水线
+                                        - ↑最终写的x值
+                                            - 先p1/p2 结束 
+                                            - p1/p2流水线，w操作接踵而至←up to 最后一次
+                                - attention：p1、p2中互相涉及PV操作← need考虑交互
+                                    - eg.![IMG_20251013_103354](https://bluejedis.github.io/picx-images-hosting/OS/IMG_20251013_103354.7p3zqfukfc.webp)
+                                        - ![IMG_20251013_103544](https://bluejedis.github.io/picx-images-hosting/OS/IMG_20251013_103544.6ikohu5t5c.webp)
+                                        - ↑考虑程序中的变量赋值，排除题中干扰
+                            - - -
+                            - need互斥的操作
+                                - ①find which**全局**变量 is 临界资源
+                                    - ↑2p中 共同的 全局变量
+                                - ②同一p中的**不同T**
+                                    - eg.![IMG_20251013_112546](https://bluejedis.github.io/picx-images-hosting/OS/IMG_20251013_112546.6pnwdbjne8.webp)
         - 互斥
 - --
-- 临界区互斥
+- **临界区互斥**
     - base
         - **临界区**
             - >**代码** of visiting**临界资源** in 进程 <span style="color:lightgray">←多p together share 系统资源</span>
+                - 几p share 涉及same变量A
+                    - A related临界区 则由几段代码组成
+                        - ↑即 几个临界区
                 - 临界资源：
                     - >互斥的 共享资源
                         - 该r is 可共享的
                             - 但 1次 only 1p use
-                                    - --
+                                - --
                                 - eg.
                                     - printer、 共享变量、共享缓冲区
                                         - ↑非共享数据 not
@@ -292,6 +463,76 @@
                         - ↑other抢占处理器，but 不进入 该p的临界区
                             - --
                         - eg.p被中断 by申请等待I/O操作
+                            - --
+                            -  link. n个进程，就绪队列、阻塞队列max个数
+                                - 就绪：n-1←处理器中 1work
+                                - 阻塞：n←死锁
+    ---
+    - 算法(软件achieve
+        - 单标志
+            - turn
+        - 双标志
+            - >flag[]
+            - 先检查
+                - >先对方
+            - 后..
+                - >后..
+        - **Peterson**
+            - >有限等待
+                - ↑not 让权
+            - >2p 互斥visit临界区' 同步机制
+                - 2变量
+                    - flag[i]
+                        - >意愿
+                    - turn
+                        - >轮到哪个(接下来)
+                - code：(3+1
+     ```c
+
+    // pi (i = 0 or 1)
+
+    flag[i] = true;           // pi愿意进入
+
+    turn = j;                  // pj
+
+    while (flag[j] && turn == j);         // pj等待
+
+        // 临界区代码开始
+
+        // ..访问共享资源..
+
+        // 临界区代码结束
+
+    flag[i] = false;           // pi离开
+
+    ```
+                    - 无死锁、不饥饿
+    ---
+    - 硬件实现
+        - >can't让权等待
+        - 中断屏蔽
+        - 硬件指令
+            - Test and Set Lock (TSL
+                - >read出 指定标志后 将其 set as真 
+                    - 原子操作
+                        - ↑ 无 关中断
+                    - lock：
+                        - >资源状态
+                        - true：正被占（已锁
+                        - false：空闲（未..
+                - base
+                    - **无阻塞态**
+                        - wait enter临界区'p
+                            - stay in执行
+
+while(TSL(&lock))的循环中
+                                - ↑won't主动放弃CPU
+                                    - 运行态till run out of时间片→放弃处理机→ 就绪态
+                                        - 此时，another就绪态p occupy处理机
+            - --
+            - swap
+
+---
 - **互斥锁**
     - >二进制S, only 打开、关闭 
     - used in
@@ -317,12 +558,12 @@
                         - 并发
                             - ↑no need 信号量
             - --
-            - type
-                - **互斥量**
+            - type1
+                - **互斥量**(mutex
                     - >usually S_init=1 ←临界区only 允许 1p入
                         - S=0
                             - 已有1p 进入 临界区
-                            - 区外 无other p 等待
+                            - 区外 **无**等待
                         - ..＜0
                             - 区中已有1p
                                 - |S| = p数 of 区外等待
@@ -337,12 +578,25 @@
                                     - 则0
                                 - 已..
                                     - 则非0正整数
-                - 资源量
+                ---
+                -  资源量
                     - >
                         - S=任意整数
                         - ..＜0
                             - r已用完
                             - |S| = p_wait数
+            - type2
+                - 整型S
+                - 记录型.. S.value
+                    - >让权等待
+                    - >系统中某类资源的可用数量；
+                        - S.value ＞0 
+                            - 可用资源数
+                        - S.value ≤ 0 时
+                            - |S| = 当前等待该资源的进程个数
+                                - eg.对S**执行P后**,p进入等待queue的条件
+                                    - S.value＜0
+                                        - ↑不可取等，否则，执行前S=1＞0，不等待
             - --
         - PV操作
             - >**原语**of低级p通信
@@ -350,15 +604,42 @@
                     - ↑不可再分 指令序列
                         - ↑also 不可中断
             - type
-                - p
+                - P
+                    - >..，S=S-1
                     - might导致
                         - 当前 临界区'p 阻塞
-                - v
+                - V
+                    - 执行后，S=S+1
+                        - eg. 1p执行V唤醒另一p，则执行后mutex?
+                            - ↑执行前，已有1等待mutex≤-1
+                                - ∴ 执行后，mutex≤0
                    
 - --
-- 经典同步
-    - P-C
-    - R-W
+- **经典同步**
+    - **P-C**
+        - >P-C间**同步**
+            - P、C共享缓冲区 **互斥**
+            - ↑solve 同步、互斥q
+        - base
+            - C wait P先
+                - 前提：
+                    - 缓冲区 empty
+                        - ↑C取产品阻塞
+            - evoke
+                - P/C皆可能唤醒P&C ←4
+                    - ↑缓冲区 only enter一个←→ others阻塞
+            - S
+                - Init=1
+                    - ↑与P、C个数无关
+                        - ↑S初值：允许几p同时← 临界区only 1p ∴1
+                        - link：
+                            - philosopher
+                                - semaphore *seat
+                                - P(seat)
+                                    - seat初值：4
+                                        - ↑4位同拿左 不会死锁
+    - **R-W**
+        - >only r-r不互斥，others互
         - - -
     <a id="section1"></a>
     - philosopher
@@ -368,6 +649,29 @@
                     - ↑资源浪费；
                         - but释放后，其他可用，不会饥饿
                 - 奇拿左再拿右；偶相反
+- --
+- **管程**
+    - >对S封装 ← can realize 同步&互斥
+        - ↑被进程调用
+            - is 语法范围
+            - can't创建和撤销
+    - consist of
+        - name
+        - **说明**of共享变量 limited in..
+        - a group of **过程**of 操作to..内'ds
+        - **语句** of set初值 to limited in..' data
+    - operation：
+        - signal()
+            - >针对 **条件变量**; 唤醒
+                - 若wait()中，不存在因条件不meet的阻塞p
+                    - 则无any影响
+                    - ↑discern：
+                        - V一定有S=S+1
+        - wait()
+
+---
+？哪些实现了 让权等待(除了记录型信号量 都未？
+
 ---
 ## 死锁deadly embrace
 - base
@@ -515,4 +819,5 @@
 ---
 看选项要看完整
 
----        
+---
+        
