--- a/25_te/进程 线程.md
+++ b/25_te/进程 线程.md
@@ -339,8 +339,8 @@
                     - t&次数 count
                         - 思路同抢占← 就绪过程中不抢占而已(?是同时到达都发生
                             - eg.结合次数+t
-                                - (此题 进程调度、切换 开销 算1us)![IMG_20251013_205800](https://bluejedis.github.io/picx-images-hosting/OS/IMG_20251013_205800.1apdvgumtp.webp)
-                                    - ![Screenshot_2025-10-13-21-19-48-010_cn](https://bluejedis.github.io/picx-images-hosting/OS/Screenshot_2025-10-13-21-19-48-010_cn.wps.moffice_eng-edit.3uv884dp64.webp)？44题答案计算也没用gantt，也不严谨吧
+                                - (此题 进程调度、切换 开销 算1us)![Screenshot_2025-10-13-21-19-48-010_cn](https://bluejedis.github.io/picx-images-hosting/OS/Screenshot_2025-10-13-21-19-48-010_cn.wps.moffice_eng-edit.3uv884dp64.webp)
+                                - ![IMG_20251013_212046](https://bluejedis.github.io/picx-images-hosting/OS/IMG_20251013_212046.1vz1hs8awr.webp)？44题答案计算也没用gantt，也不严谨吧
                 ---
                 -  抢占式/剥夺式优先级              
                     - >suite实时system
